# Astralax

./: CMakeLists.txt  LICENSE  README.md
Astralax/: CMakeLists.txt  main  main.cpp
Astralax/astralax/: CMakeLists.txt
Astralax/astralax/include/: common.h
Astralax/astralax/include/Builder/: Builder.h
Astralax/astralax/include/Dialect/: Attrs.td  CMakeLists.txt  Enums.td
Astralax/astralax/include/Dialect/HLD/: CMakeLists.txt  HLDOps.h  HldOps.td
Astralax/astralax/include/Dialect/HLD/Interfaces/: CMakeLists.txt  ShapeInterface.h  ShapeInterface.td
Astralax/astralax/include/Utils/: MLIRHelper.h
Astralax/astralax/lib/: CMakeLists.txt
Astralax/astralax/lib/Builder/: Builder.cpp  CMakeLists.txt
Astralax/astralax/lib/Builder/ONNX/: CMakeLists.txt  OnnxConverter.cpp  OnnxConverter.h
Astralax/astralax/lib/Dialect/: CMakeLists.txt
Astralax/astralax/lib/Dialect/HLD/: CMakeLists.txt  HLDOps.cpp
Astralax/astralax/lib/Dialect/HLD/Interfaces/: CMakeLists.txt  ShapeInterface.cpp
Astralax/astralax/lib/Utils/: CMakeLists.txt  MLIRHelper.cpp
Astralax/astralax/tools/: CMakeLists.txt
Astralax/astralax/tools/onnx-parser/: CMakeLists.txt  onnx-parser.cpp
Astralax/leetcode/: sequence.cpp
astralax/: CMakeLists.txt
astralax/benchmarks/: README.md  driver.py
astralax/benchmarks/harness/: controller.py
astralax/benchmarks/mlir/: gemm-bf16-3layers-1024.mlir  gemm-bf16_dp2-3layers-1024.mlir  gemm-bf16_dp4-3layers-1024.mlir  gemm-fp32-3layers-1024-unpacked.mlir  gemm-fp32-3layers-1024.mlir  mlp-bf16-10layers-3584.mlir  mlp-bf16-3layers-1024-unpacked.mlir  mlp-bf16-3layers-1024.mlir  mlp-bf16_dp2-3layers-1024.mlir  mlp-bf16_dp4-3layers-1024.mlir  mlp-fp32-3layers-1024.mlir
astralax/include/: CMakeLists.txt  common.h
astralax/include/ASTL/: BuilderUtils.h  CMakeLists.txt  MatcherUtils.h  PassUtils.h  Passes.h  Passes.td  TensorInit.h  TensorInitFloat.h  TensorInitInt.h  TransformUtils.h  Transforms.h  VNNIUtils.h  ValueUtils.h
astralax/include/Assembler/: masm.h
astralax/include/Astralax/: CMakeLists.txt  InitAll.h
astralax/lib/: CMakeLists.txt
astralax/lib/ASTL/: Bufferize.cpp  BuilderUtils.cpp  CMakeLists.txt  CombineAstl.cpp  ConstantFoldPack.cpp  ConvInitSimplify.cpp  ConvertAstlToLoops.cpp  ConvertAstlToXsmm.cpp  ConvertCheckToLoops.cpp  ConvertForAllToParallelOp.cpp  ConvertLinalgToAstl.cpp  ConvertLinalgToXsmm.cpp  ConvertMemRefToAstl.cpp  ConvertPackOptimization.cpp  ConvertPerfToFunc.cpp  ConvertPerfToLoops.cpp  ConvertXsmmToFunc.cpp  DecomposeAggregatedOps.cpp  DefaultAstlPasses.cpp  DefaultPipeline.cpp  GeneralizeTensorPackAndUnPack.cpp  LinalgDeGeneralize.cpp  MatcherUtils.cpp  RewriteBatchMatmulToMatmul.cpp  RewriteConvToMatmulImpl.cpp  RewriteConvsToMatmulOrBrgemm.cpp  RewriteToBatchReduceGemm.cpp  TensorInit.cpp  TensorInitFloat.cpp  TensorInitInt.cpp  TestForToForAllRewrite.cpp  TestMatchers.cpp  TileConsumerAndFuseProducers.cpp  ToBlockLayoutAndBack.cpp  TransformDialectInterpreter.cpp  TransformUtils.cpp  VNNIUtils.cpp  ValueUtils.cpp
astralax/lib/ASTL/Dialect/: CMakeLists.txt
astralax/lib/ASTL/Dialect/Astl/: AstlAttr.cpp  AstlDialect.cpp  AstlInterface.cpp  AstlOps.cpp  AstlTraits.cpp  AstlUtils.cpp  BufferizableOpInterfaceImpl.cpp  CMakeLists.txt
astralax/lib/ASTL/Dialect/Check/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  CheckDialect.cpp  CheckOps.cpp
astralax/lib/ASTL/Dialect/Perf/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  PerfDialect.cpp  PerfOps.cpp
astralax/lib/ASTL/Dialect/Transform/: CMakeLists.txt  IteratorCollapsing.cpp  LinalgXTransformOps.cpp
astralax/lib/ASTL/Dialect/Xsmm/: CMakeLists.txt  XsmmDialect.cpp  XsmmEnum.cpp  XsmmOps.cpp  XsmmUtils.cpp
astralax/lib/ASTL/GPU/: CMakeLists.txt  GPUToSPIRVPass.cpp  GpuConversion.cpp  GpuPipeline.cpp  GpuToCuda.cpp  GpuToVulkan.cpp  GpuVulkanAbi.cpp  LinalgToGpu.cpp  README.md  SetSPIRVAbiAttribute.cpp  SetSPIRVCapabilities.cpp  Utils.cpp
astralax/lib/ASTL/IR/: CMakeLists.txt  StructuredOpMatcher.cpp
astralax/lib/Assembler/: CMakeLists.txt
astralax/lib/Assembler/MasmOps/: AddOp.cpp  CMakeLists.txt  Conv3x3s1p1_i8xi10ti8.cpp  Operator.cpp  SubOp.cpp
astralax/lib/Astralax/: CMakeLists.txt  InitAll.cpp
astralax/lib/Astralax/Builder/: Builder.cpp  Builder.h  CMakeLists.txt
astralax/lib/Astralax/Builder/ONNX/: CMakeLists.txt  OnnxConverter.cpp  OnnxConverter.h
astralax/lib/Astralax/Conversion/: CMakeLists.txt
astralax/lib/Astralax/Conversion/Init/: Init.cpp
astralax/lib/Astralax/Dialect/: CMakeLists.txt
astralax/lib/Astralax/Dialect/ASTL/: CMakeLists.txt
astralax/lib/Astralax/Transforms/: CMakeLists.txt
astralax/lib/Astralax/Transforms/Quant/: Quant.cpp
astralax/lib/Codegen/: CMakeLists.txt  run-op-test.cpp
astralax/lib/Helper/: CMakeLists.txt  Helper.cpp
astralax/lib/TPP/: CMakeLists.txt
astralax/runtime/: CMakeLists.txt  PerfRunnerUtils.cpp  PerfRunnerUtils.h  XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
astralax/scripts/: README.md  env.sh
astralax/scripts/buildkite/: astl-benchmark.yml  astl-gpu.yml  astl-mlir.yml  astl-performance.yml  benchmark.sh  benchmark_gpu.sh  build_astl.sh  check_llvm.sh
astralax/scripts/ci/: cmake.sh  lint-clang.sh
astralax/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
astralax/test/BF16/: brgemm-astl.mlir  brgemm-vnni.mlir  matmul-tiled-vnni.mlir  matmul-untiled-vnni.mlir  matmul-vnni.mlir
astralax/test/GPU/: astl-to-gpu.mlir  gpu-conversion.mlir  gpu-vulkan-abi.mlir  linalg-to-gpu.mlir  lit.local.cfg
astralax/test/Integration/: astl-add.mlir  astl-brgemm-non-unit-batch.mlir  astl-brgemm.mlir  astl-fused-brgemm-no-fusion.mlir  astl-fused-brgemm.mlir  astl-identity.mlir  astl-matmul.mlir  astl-pack.mlir  astl-relu-with-subviews.mlir  astl-relu.mlir  astl-run-bufferization.mlir  astl-run-parallel.mlir  astl-run-splat-memref.mlir  astl-run-splat-mlp.mlir  astl-run-splat-tensor.mlir  (+41 more)
astralax/tools/: CMakeLists.txt
astralax/tools/astl-opt/: CMakeLists.txt  astl-opt.cpp
astralax/tools/astl-run/: CMakeLists.txt  MLIRBench.cpp  MLIRBench.h  README.md  astl-run.cpp
cmake/: protobuf.cmake
(+225 files in other folders)
